--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
     </div>
 </div>
 <script>
-    //Disable Right Click xD Sorry For That!
-    document.addEventListener("contextmenu", function(e){
-        e.preventDefault();
-    }, false);
-    //Disable Shortcut Keys Cntrl+U Or F12!
-    document.addEventListener("keydown",function(e){
-        if(e.ctrlKey || e.keyCode==123){
-            e.stopPropagation();
-            e.preventDefault();
-        }
-    });
+    // //Disable Right Click xD Sorry For That!
+    // document.addEventListener("contextmenu", function(e){
+    //     e.preventDefault();
+    // }, false);
+    // //Disable Shortcut Keys Cntrl+U Or F12!
+    // document.addEventListener("keydown",function(e){
+    //     if(e.ctrlKey || e.keyCode==123){
+    //         e.stopPropagation();
+    //         e.preventDefault();
+    //     }
+    // });
 </script>
 <script src="script.js"></script>
 <script src="./logout.js"></script>
